--- a/components/JTableRow/package.json
+++ b/components/JTableRow/package.json
@@ -3,5 +3,8 @@
   "version": "0.1.0",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@jsilva-pt/j-table-row": "^0.1.0"
   }
 }
